2017-11-10  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Remove excessive LinkSep terminator.

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList()):
	  - Remove extra LinkSep[] terminator assignment.
	    Only one is enough.

2017-11-10  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Adjust SwapLinkSep() loop more.

	* src/abswordseg.cpp (AbsWordSeg::SwapLinkSep()):
	  - Rename variables: st_idx -> start; en_idx -> end.
	  - Instead of saving 'end' and directly iterating on it,
	    define another 'upper' iterator for that purpose.
	    Then, 'end' value can be used at the end.

2017-11-10  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Simplify SwapLinkSep() loop.

	* src/abswordseg.cpp (AbsWordSeg::SwapLinkSep()):
	  - Move en_idx, end_point, tmp vars inside loop
	    where they are used. Only st_idx is left on top level.
	  - No more en_idx assignment at loop end.
	  - Stop en_idx exactly at LinkSep[] element with value -1,
	    not the one after.
	  - Simply assign end_point as saved storage of en_idx value.
	    No computation is needed.
	  - Simply decrement en_idx to get the last non-terminate element.
	    No confusing skip by 2.
	  - Simplify the swap code inside inner while-loop.

2017-11-10  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Set IdxSep[] on every char instead of relying on defaults.

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList()):
	  - Instead of skipping IdxSep[i] assignments and relying on
	    initial values on some chars, let's assign them explicitly.

	* src/abswordseg.cpp (AbsWordSeg::WordSeg()):
	  - Remove now-unneeded InitData() call.
	* src/abswordseg.h, src/abswordseg.cpp (-AbsWordSeg::InitData()):
	  - Remove now-unneeded InitData() method.

2017-11-10  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Add test for mixed text.

	* tests/Makefile.am,
	  +tests/test-mixed.sh, +tests/mixed.txt, +tests/mixed-wseg.txt:
	  - Add test case for text mixed with English text, digits,
	    Thai digits.